--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
            <a class="nav-link" href="">Home</a>
        </li>
        <li class="nav-item">
-        <a class="nav-link" href="">AboutUs</a>
+        <a class="nav-link" href="grid3.html">AboutUs</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="">ContactUs</a>
+        <a class="nav-link" href="form3.html">ContactUs</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="">Gallery</a>
