--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="collapse navbar-collapse" id="m1">
    <ul class="navbar-nav">
        <li class="nav-item">
-           <a class="nav-link" href="">Home</a>
+           <a class="nav-link" href="index.html">Home</a>
        </li>
        <li class="nav-item">
         <a class="nav-link" href="grid3.html">AboutUs</a>
