--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 </div>
 </nav>
 <img src="images/image4.jpg" alt="">
+<img src="images/image2.jpg" alt="">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
