--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 </div>
 </nav>
 <img src="images/image4.jpg" alt="">
+<img src="nature.jpg" alt="">
 <img src="images/image2.jpg" alt="">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
